completed about and fixed footer from hiding content on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body { padding-top: 70px;
+	padding-bottom: 30px;
 background: #C13636; 
 }
 
@@ -71,7 +72,8 @@ background: #C13636;
 	font-family: JCkg;
 	font-size: 100%;
 	text-align: center;
-	
+	background-color: #C13636;
+
 }
 
 #footer p {
@@ -85,21 +87,22 @@ background: #C13636;
 }
 
 .about {
-	padding: 10%;
+	padding: 4%;
+	overflow: none;
 }
 
 .about #text {
-	font-size: 4vh;
-	color: white;
-	background-color: gray;
-	margin: 20px;
+	font-size: 3vh;
+	color: #E7E3E8;
+	margin: 10px;
+	border-width: 1px;
 }
 
 .about #info {
-	font-size: 4vh;
+	font-size: 3vh;
 	color: white;
-	background-color: black;
-	margin: 20px;
+	background-color: brown;
+	margin-top: 15px;
 
 }
 
